test/classes/initializers/compilerGenerated/dflt-ctor-generic-uninit-field-var-err-1.good
dflt-ctor-generic-uninit-field-var-err-1.chpl:7: error: unresolved call 'A.init()'
dflt-ctor-generic-uninit-field-var-err-1.chpl:3: note: this candidate did not match: A.init(v)
dflt-ctor-generic-uninit-field-var-err-1.chpl:7: note: because call does not supply enough arguments
dflt-ctor-generic-uninit-field-var-err-1.chpl:4: note: it is missing a value for formal 'in v'
